--- a/app/styles/navbar.css
+++ b/app/styles/navbar.css
@@ -1,7 +1,8 @@
 /* Navbar Styling */
 nav {
-    background-color: #333;
-    color: white;
+  border-bottom: 1px #333 solid;
+    background-color: #fff;
+    color: black;
     padding: 10px 0;
     position: sticky;
     top: 0;
@@ -20,7 +21,7 @@ nav {
   .logo-link {
     font-size: 1.8rem;
     font-weight: bold;
-    color: white;
+    color: black;
     text-decoration: none;
   }
   
@@ -38,19 +39,24 @@ nav {
   
   .nav-link {
     font-size: 1.1rem;
-    color: white;
+    color: black;
     text-decoration: none;
     padding: 8px 16px;
     transition: background-color 0.3s ease, color 0.3s ease;
+    border-radius: 5px;
   }
   
   .nav-link:hover,
   .nav-link:focus {
     background-color: #4CAF50;
-    color: white;
-    border-radius: 5px;
+    color: black;
   }
   
   .nav-link:active {
     transform: scale(0.98);
   }
+
+  .hide {
+    display: none;
+  }
+  
